--- a/frontend/src/components/VacationSpotFormPage/VacationSpotForm.css
+++ b/frontend/src/components/VacationSpotFormPage/VacationSpotForm.css
@@ -14,7 +14,7 @@
     text-shadow: 3px 3px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
     font-size: 30px;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow: auto;
     padding-top: 100px;
     animation: switchEffect ease-in-out 30s;
     animation-iteration-count: infinite;
